--- a/homework.ipynb
+++ b/homework.ipynb
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 59,
       "metadata": {
         "id": "teDxcSlJnS34"
       },
@@ -99,7 +99,8 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p1(seq):\n",
-        "    ..."
+        "    \n",
+        "    return [i for i in seq if i is not None]"
       ]
     },
     {
@@ -115,11 +116,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "metadata": {
         "id": "1jZXBLhmns--"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[0, 1, 2, 4, 'a', 'b']"
+            ]
+          },
+          "execution_count": 60,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p1([0, 1, 2, None, 4, \"a\", \"b\"])"
       ]
@@ -137,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "metadata": {
         "id": "90vL5z5XnigG"
       },
@@ -146,7 +158,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p2(seq):\n",
-        "    ..."
+        "    return [i for i in seq if i == True]"
       ]
     },
     {
@@ -162,11 +174,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "metadata": {
         "id": "yCOW3O09oHV5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[1, True]"
+            ]
+          },
+          "execution_count": 62,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p2([0, 1, 2, None, 4, \"a\", \"b\", False, True])"
       ]
@@ -184,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "metadata": {
         "id": "xTB_tXMTobVs"
       },
@@ -193,7 +216,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p3(seq):\n",
-        "    ..."
+        "    return [i for i in seq if i is not None and i == False]"
       ]
     },
     {
@@ -208,11 +231,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 64,
       "metadata": {
         "id": "tWHqPjrXofNi"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[0, False]"
+            ]
+          },
+          "execution_count": 64,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p3([0, 1, 2, None, 4, \"a\", \"b\", False, True])"
       ]
@@ -231,7 +265,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 65,
       "metadata": {
         "id": "Mhy3u6QKDBWJ"
       },
@@ -240,7 +274,10 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p4(n):\n",
-        "    ..."
+        "    sum = 0\n",
+        "    for i in range(n):\n",
+        "        sum += i\n",
+        "    return sum"
       ]
     },
     {
@@ -255,11 +292,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "metadata": {
         "id": "xAHEoxzuoqyO"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "execution_count": 66,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# p4(0) should be 0\n",
         "p4(0)"
@@ -267,11 +315,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 67,
       "metadata": {
         "id": "A-5b6g57osqv"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "execution_count": 67,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# p4(1) should also be 0\n",
         "p4(1)"
@@ -279,11 +338,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 68,
       "metadata": {
         "id": "m9TS13UsotoN"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "execution_count": 68,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# p4(2) should be 0+1=1\n",
         "p4(2)"
@@ -291,11 +361,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 69,
       "metadata": {
         "id": "-uoB3IAKoutu"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "45"
+            ]
+          },
+          "execution_count": 69,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# p4(10) should be 0+1+2+3+4+5+6+7+8+9=45\n",
         "p4(10)"
@@ -314,7 +395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "metadata": {
         "id": "1-JbJbiNDPgN"
       },
@@ -323,7 +404,13 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p5(n):\n",
-        "    ..."
+        "    \n",
+        "    sum = 0\n",
+        "    for k in range(n):\n",
+        "        if k % 5 != 0:\n",
+        "          sum += k\n",
+        "    return sum\n",
+        "    "
       ]
     },
     {
@@ -338,11 +425,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 71,
       "metadata": {
         "id": "-nZbMHZ7rkwo"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "execution_count": 71,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# p5(0) should be 0\n",
         "p5(0)"
@@ -350,11 +448,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 72,
       "metadata": {
         "id": "8d-NwdpArqCI"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "execution_count": 72,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# p5(6) should be 1+2+3+4=10 (note 5 skipped)\n",
         "p5(6)"
@@ -373,7 +482,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 73,
       "metadata": {
         "id": "uWTJJBu2Dapd"
       },
@@ -382,7 +491,10 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p6(dictionaries):\n",
-        "    ..."
+        "    if not dictionaries:\n",
+        "        return None\n",
+        "    \n",
+        "    return max(dictionaries, key=lambda d: d.get(\"score\"))"
       ]
     },
     {
@@ -397,11 +509,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 74,
       "metadata": {
         "id": "6rvuO-6UsAo1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'score': 13.1}"
+            ]
+          },
+          "execution_count": 74,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p6([{\"score\": 1},\n",
         "    {\"score\": 13.1},\n",
@@ -422,7 +545,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 75,
       "metadata": {
         "id": "3Sp5OQEImUN_"
       },
@@ -438,7 +561,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 76,
       "metadata": {
         "id": "Rle-GnKwmoFV"
       },
@@ -447,7 +570,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "# sort p7 here\n",
-        "..."
+        "p7 = sorted(p7, key=lambda d: d['c'])"
       ]
     },
     {
@@ -461,11 +584,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 77,
       "metadata": {
         "id": "tbD9BaI5sdFW"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'a': 2, 'b': 52, 'c': 123},\n",
+              " {'a': 5, 'b': 52, 'c': 321},\n",
+              " {'a': 4, 'b': 52, 'c': 456},\n",
+              " {'a': 1, 'b': 52, 'c': 513},\n",
+              " {'a': 3, 'b': 52, 'c': 999}]"
+            ]
+          },
+          "execution_count": 77,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p7"
       ]
@@ -483,7 +621,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 78,
       "metadata": {
         "id": "YEq-hQMUlnLG"
       },
@@ -492,7 +630,8 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p8(seq):\n",
-        "    ..."
+        "    list_sorted = sorted(seq, key=lambda d: d['score'])\n",
+        "    return list_sorted"
       ]
     },
     {
@@ -507,33 +646,66 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 79,
       "metadata": {
         "id": "5nAyUIwsszXs"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[]"
+            ]
+          },
+          "execution_count": 79,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p8([])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 80,
       "metadata": {
         "id": "dR_hzfBas03e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'score': 1}, {'score': 3}]"
+            ]
+          },
+          "execution_count": 80,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p8([{\"score\": 3}, {\"score\": 1}])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 81,
       "metadata": {
         "id": "jxiZMLsqs7X5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'score': 3}, {'score': 5}, {'score': 6}]"
+            ]
+          },
+          "execution_count": 81,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# this input sequence is a tuple, so it does not have a sort method.\n",
         "\n",
@@ -557,7 +729,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 82,
       "metadata": {
         "id": "LCatOFAUDkhC"
       },
@@ -566,7 +738,9 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p9(dictionaries):\n",
-        "    ..."
+        "    \n",
+        "    sorted_dict = sorted(dictionaries, key=lambda d: d.get(\"score\", float('-inf')), reverse=True)\n",
+        "    return sorted_dict[:5]"
       ]
     },
     {
@@ -581,11 +755,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 83,
       "metadata": {
         "id": "RQwDteRUuPtE"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'score': 0},\n",
+              " {'score': 1},\n",
+              " {'score': 2},\n",
+              " {'score': 3},\n",
+              " {'score': 4},\n",
+              " {'score': 5},\n",
+              " {'score': 6},\n",
+              " {'score': 7},\n",
+              " {'score': 8},\n",
+              " {'score': 9}]"
+            ]
+          },
+          "execution_count": 83,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p9_example_input = [{\"score\": i} for i in range(10)]\n",
         "p9_example_input"
@@ -593,11 +787,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 84,
       "metadata": {
         "id": "J6JWdCbpuie5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'score': 9}, {'score': 8}, {'score': 7}, {'score': 6}, {'score': 5}]"
+            ]
+          },
+          "execution_count": 84,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p9(p9_example_input)"
       ]
@@ -615,7 +820,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 85,
       "metadata": {
         "id": "XpxH3dGWDux_"
       },
@@ -624,7 +829,10 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p10(dictionaries, score_function):\n",
-        "    ..."
+        "    \n",
+        "    if not dictionaries:\n",
+        "        return None\n",
+        "    return max(dictionaries, key=score_function)"
       ]
     },
     {
@@ -639,22 +847,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 86,
       "metadata": {
         "id": "u_ZFPFEJ4AU1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'score': 5}"
+            ]
+          },
+          "execution_count": 86,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p10([{\"score\": 3}, {\"score\": 5}], lambda r: r[\"score\"])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 87,
       "metadata": {
         "id": "eJYKi6QE4HkR"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'a': 3}"
+            ]
+          },
+          "execution_count": 87,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# note this sorts by negative \"a\"\n",
         "p10([{\"a\": 5}, {\"a\": 3}], lambda r: -r[\"a\"])"
@@ -674,7 +904,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 88,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -685,7 +915,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 89,
       "metadata": {
         "id": "xfw7S3gnEDg-"
       },
@@ -694,7 +924,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p11(n):\n",
-        "    ..."
+        "    return math.prod(range(1, n + 1))"
       ]
     },
     {
@@ -710,7 +940,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 90,
       "metadata": {
         "id": "Msv-S8sqEWQn"
       },
@@ -719,7 +949,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p12(dictionaries, key):\n",
-        "    ..."
+        "    return {d.get(key) for d in dictionaries}"
       ]
     },
     {
@@ -738,7 +968,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 91,
       "metadata": {
         "id": "yc26DedyE2JT"
       },
@@ -747,7 +977,12 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p13(dictionaries, key):\n",
-        "    ..."
+        "    for d in dictionaries:\n",
+        "        value = d.get(key)\n",
+        "        if value is None or value == \"\":\n",
+        "            return d\n",
+        "    \n",
+        "    return None"
       ]
     },
     {
@@ -779,7 +1014,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 92,
       "metadata": {
         "id": "9mv3iK4NFL_d"
       },
@@ -787,7 +1022,7 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p14 = ..."
+        "p14 = 4"
       ]
     },
     {
@@ -818,7 +1053,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 93,
       "metadata": {
         "id": "C9QHxIqiGHzX"
       },
@@ -826,7 +1061,7 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p15 = ..."
+        "p15 = 10"
       ]
     },
     {
@@ -849,7 +1084,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 94,
       "metadata": {
         "id": "u1gwOF_uGL_2"
       },
@@ -857,7 +1092,7 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "..."
+        "p16 = 3"
       ]
     },
     {
@@ -878,7 +1113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 95,
       "metadata": {
         "id": "Z_jb-O9nGOJo"
       },
@@ -886,7 +1121,7 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "..."
+        "p17 = 13"
       ]
     },
     {
@@ -902,7 +1137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 96,
       "metadata": {
         "id": "QrC_w0YGGQRZ"
       },
@@ -910,7 +1145,9 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "..."
+        "def p18(input_list):\n",
+        "    return len(input_list) >= 18\n",
+        "    "
       ]
     },
     {
@@ -926,7 +1163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 97,
       "metadata": {
         "id": "aQ7IcY3VGTac"
       },
@@ -934,7 +1171,8 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "..."
+        "def p19(input_list):\n",
+        "    return all(0.5 < x < 0.75 for x in input_list)  "
       ]
     },
     {
@@ -959,7 +1197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 98,
       "metadata": {
         "id": "vHmndpn0GWed"
       },
@@ -967,7 +1205,7 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "..."
+        "p20 = 42"
       ]
     }
   ],
@@ -989,7 +1227,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.6"
+      "version": "3.12.1"
     }
   },
   "nbformat": 4,
