--- a/homework.ipynb
+++ b/homework.ipynb
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 51,
       "metadata": {
         "id": "teDxcSlJnS34"
       },
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 52,
       "metadata": {
         "id": "1jZXBLhmns--"
       },
@@ -127,7 +127,7 @@
               "[0, 1, 2, 4, 'a', 'b']"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 52,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -149,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 53,
       "metadata": {
         "id": "90vL5z5XnigG"
       },
@@ -158,7 +158,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p2(seq):\n",
-        "    return [i for i in seq if i == True]"
+        "    return [i for i in seq if i]"
       ]
     },
     {
@@ -174,7 +174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 54,
       "metadata": {
         "id": "yCOW3O09oHV5"
       },
@@ -182,10 +182,10 @@
         {
           "data": {
             "text/plain": [
-              "[1, True]"
+              "[1, 2, 4, 'a', 'b', True]"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 54,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -207,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 55,
       "metadata": {
         "id": "xTB_tXMTobVs"
       },
@@ -216,7 +216,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p3(seq):\n",
-        "    return [i for i in seq if i is not None and i == False]"
+        "    return [i for i in seq if i is not None and not i]"
       ]
     },
     {
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 56,
       "metadata": {
         "id": "tWHqPjrXofNi"
       },
@@ -242,7 +242,7 @@
               "[0, False]"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 56,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -265,7 +265,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 57,
       "metadata": {
         "id": "Mhy3u6QKDBWJ"
       },
@@ -292,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 58,
       "metadata": {
         "id": "xAHEoxzuoqyO"
       },
@@ -303,7 +303,7 @@
               "0"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 58,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -315,7 +315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 59,
       "metadata": {
         "id": "A-5b6g57osqv"
       },
@@ -326,7 +326,7 @@
               "0"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 59,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -338,7 +338,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 60,
       "metadata": {
         "id": "m9TS13UsotoN"
       },
@@ -349,7 +349,7 @@
               "1"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 60,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -361,7 +361,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 61,
       "metadata": {
         "id": "-uoB3IAKoutu"
       },
@@ -372,7 +372,7 @@
               "45"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 61,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -395,7 +395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 62,
       "metadata": {
         "id": "1-JbJbiNDPgN"
       },
@@ -425,7 +425,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 63,
       "metadata": {
         "id": "-nZbMHZ7rkwo"
       },
@@ -436,7 +436,7 @@
               "0"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 63,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -448,7 +448,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 64,
       "metadata": {
         "id": "8d-NwdpArqCI"
       },
@@ -459,7 +459,7 @@
               "10"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 64,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -482,7 +482,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 65,
       "metadata": {
         "id": "uWTJJBu2Dapd"
       },
@@ -509,7 +509,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 66,
       "metadata": {
         "id": "6rvuO-6UsAo1"
       },
@@ -520,7 +520,7 @@
               "{'score': 13.1}"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 66,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -545,7 +545,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 67,
       "metadata": {
         "id": "3Sp5OQEImUN_"
       },
@@ -561,7 +561,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 68,
       "metadata": {
         "id": "Rle-GnKwmoFV"
       },
@@ -584,7 +584,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 69,
       "metadata": {
         "id": "tbD9BaI5sdFW"
       },
@@ -599,7 +599,7 @@
               " {'a': 3, 'b': 52, 'c': 999}]"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 69,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -621,7 +621,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 70,
       "metadata": {
         "id": "YEq-hQMUlnLG"
       },
@@ -646,7 +646,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 71,
       "metadata": {
         "id": "5nAyUIwsszXs"
       },
@@ -657,7 +657,7 @@
               "[]"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 71,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -668,7 +668,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 72,
       "metadata": {
         "id": "dR_hzfBas03e"
       },
@@ -679,7 +679,7 @@
               "[{'score': 1}, {'score': 3}]"
             ]
           },
-          "execution_count": 22,
+          "execution_count": 72,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -690,7 +690,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 73,
       "metadata": {
         "id": "jxiZMLsqs7X5"
       },
@@ -701,7 +701,7 @@
               "[{'score': 3}, {'score': 5}, {'score': 6}]"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 73,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -729,7 +729,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 74,
       "metadata": {
         "id": "LCatOFAUDkhC"
       },
@@ -755,7 +755,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 75,
       "metadata": {
         "id": "RQwDteRUuPtE"
       },
@@ -775,7 +775,7 @@
               " {'score': 9}]"
             ]
           },
-          "execution_count": 25,
+          "execution_count": 75,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -787,7 +787,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 76,
       "metadata": {
         "id": "J6JWdCbpuie5"
       },
@@ -798,7 +798,7 @@
               "[{'score': 9}, {'score': 8}, {'score': 7}, {'score': 6}, {'score': 5}]"
             ]
           },
-          "execution_count": 26,
+          "execution_count": 76,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -820,7 +820,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 77,
       "metadata": {
         "id": "XpxH3dGWDux_"
       },
@@ -847,7 +847,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 78,
       "metadata": {
         "id": "u_ZFPFEJ4AU1"
       },
@@ -858,7 +858,7 @@
               "{'score': 5}"
             ]
           },
-          "execution_count": 28,
+          "execution_count": 78,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -869,7 +869,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 79,
       "metadata": {
         "id": "eJYKi6QE4HkR"
       },
@@ -880,7 +880,7 @@
               "{'a': 3}"
             ]
           },
-          "execution_count": 29,
+          "execution_count": 79,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -904,7 +904,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 80,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -915,7 +915,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 81,
       "metadata": {
         "id": "xfw7S3gnEDg-"
       },
@@ -940,7 +940,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 82,
       "metadata": {
         "id": "Msv-S8sqEWQn"
       },
@@ -968,7 +968,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 83,
       "metadata": {
         "id": "yc26DedyE2JT"
       },
@@ -1014,7 +1014,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 84,
       "metadata": {
         "id": "9mv3iK4NFL_d"
       },
@@ -1053,7 +1053,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 85,
       "metadata": {
         "id": "C9QHxIqiGHzX"
       },
@@ -1084,7 +1084,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 86,
       "metadata": {
         "id": "u1gwOF_uGL_2"
       },
@@ -1113,7 +1113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 87,
       "metadata": {
         "id": "Z_jb-O9nGOJo"
       },
@@ -1121,7 +1121,7 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p17 = 13"
+        "p17 = 5"
       ]
     },
     {
@@ -1137,7 +1137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 88,
       "metadata": {
         "id": "QrC_w0YGGQRZ"
       },
@@ -1163,7 +1163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 91,
       "metadata": {
         "id": "aQ7IcY3VGTac"
       },
@@ -1197,7 +1197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 90,
       "metadata": {
         "id": "vHmndpn0GWed"
       },
