--- a/homework.ipynb
+++ b/homework.ipynb
@@ -1163,7 +1163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 92,
       "metadata": {
         "id": "aQ7IcY3VGTac"
       },
@@ -1172,7 +1172,11 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p19(input_list):\n",
-        "    return all(0.5 < x < 0.75 for x in input_list)  "
+        "    for i in input_list:\n",
+        "        if i > 0.5 and i < 0.75:\n",
+        "            return True\n",
+        "        \n",
+        "    return False "
       ]
     },
     {
